@@ -1,3 +1,12 @@
+2026-02-10T01:18:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21847699170 # 873
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 693 1087 / 695 1089
+* notice: next accum: outdated-unq outdated-all / unq all: 693 1087 / 696 1090
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2026-01-20 2026-01-21 2026-01-22 2026-01-23] / [2026-02-03]
+
 2026-02-04T00:55:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21653949976 # 867
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
